Added lectures 1-4. Improved config.

--- a/assignments/example.ipynb
+++ b/assignments/example.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +48,7 @@
     "tags": []
    },
    "source": [
-    "### Exercise `Fibonacci-For`"
+    "### Assignment `Fibonacci-For`"
    ]
   },
   {
@@ -80,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise `Fibonacci-Recursive`"
+    "### Assignment `Fibonacci-Recursive`"
    ]
   },
   {
@@ -137,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise `find-digits`"
+    "### Assignment `find-digits`"
    ]
   },
   {
